--- a/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/style.css
+++ b/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/style.css
@@ -1,3 +1,7 @@
+body{
+    background: gray;
+}
+
 #title, .subtitle, .post-title {
     color:blue;
 }
@@ -5,4 +9,11 @@
 .post-title {
     font-size: 16px;
     font-style: italic;
+}
+
+.post{
+    background: white;
+    padding: 10px;
+    border: 3px solid black;
+    margin: 10px;
 }
