--- a/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/style.css
+++ b/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/style.css
@@ -1,19 +1,36 @@
 body{
-    background: gray;
+    background: rgba(143, 136, 136, 0.548);
+}
+
+.photo {
+    border: 1px solid #505050;
+    border-radius: 50%;
 }
 
 #title, .subtitle, .post-title {
-    color:blue;
+    color:#505050;
 }
 
 .post-title {
     font-size: 16px;
     font-style: italic;
+    margin: 0;
+    margin-bottom: 15px;
 }
 
 .post{
     background: white;
-    padding: 10px;
-    border: 3px solid black;
-    margin: 10px;
+    padding: 15px;
+    border: 3px solid #505050;
+    margin-bottom: 15px;
+}
+
+.post-content{
+    margin: 0;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+.post-image{
+    margin-bottom: 15px;
 }
