--- a/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/style.css
+++ b/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/style.css
@@ -1,6 +1,8 @@
 body{
     background: rgba(143, 136, 136, 0.548);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    max-width: 900px;
+    margin: auto;
 }
 
 .photo {
@@ -40,6 +42,7 @@ a {
     margin: 0;
     margin-bottom: 15px;
     border-radius: 5px;
+    text-align: justify;
 }
 
 .post-image{
