--- a/Recriando-a-Interface-do-Netflix/style/main.css
+++ b/Recriando-a-Interface-do-Netflix/style/main.css
@@ -44,9 +44,21 @@ header nav a:hover{
 
 .filme-principal {
     font-size: 16px;
-    background: url('/img/capa-house.jpg');
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,0.50)100%), url('/img/capa-house.jpg');
 
     height: 400px;
     background-size: cover;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filme-principal .descricao{
+    margin-bottom: 40px;
+}
+
+.titulo {
+    font-size: 40px;
 }
